--- a/indext.html
+++ b/indext.html
@@ -13,7 +13,7 @@
         <div class="main" >
             <div class="output">
                 <div data-previous-operand class="previous-operand"></div>
-                <div data-current-operand  class="present-operand"></div> 
+                <div data-current-operand  class="present-operand">saranghae</div> 
             </div>
                
                    <button data-all-clear class="two" id="space">AC</button>
